--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "cp ./node_modules/@fontsource/fira-sans/files/fira-sans-latin-400-normal.woff ./public"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
