--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.6.3",
     "axios": "^1.5.0",
+    "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.19",
