--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.6.3",
     "axios": "^1.5.0",
+    "firebase": "^10.4.0",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "recoil": "^0.7.7",
     "styled-components": "^6.0.6",
     "swiper": "^10.0.4",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
