--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.4.0",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
