--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.19",
     "recoil": "^0.7.7",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.6",
     "swiper": "^10.0.4",
     "uuid": "^9.0.1",
