--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-highlight-words": "^0.20.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.19",
