--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.6.3",
     "axios": "^1.5.0",
+    "apexcharts": "^3.27.1",
+    "react-apexcharts": "^1.3.9",
     "firebase": "^10.4.0",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
