--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.0",
     "firebase": "^10.4.0",
     "gapi-script": "^1.2.0",
+    "html-to-react": "^1.7.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
